--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -31,37 +37,40 @@
 
     <main>
       <section class="hero">
-        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <h1 class="hero-title">
+          Эффективные решения <br />
+          для вашего бизнеса
+        </h1>
         <button type="button" class="button primary">Заказать услугу</button>
       </section>
 
       <section class="quality">
-        <h2 class="quality-title">Наши качества</h2>
+        <h2 class="quality-title visually-hidden">Наши качества</h2>
         <ul class="quality-list list">
           <li>
             <h3 class="title">Внимание к деталям</h3>
-            <p>
+            <p class="text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
             <h3 class="title">Пунктуальность</h3>
-            <p>
+            <p class="text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
             <h3 class="title">Планирование</h3>
-            <p>
+            <p class="text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
             <h3 class="title">Современные технологии</h3>
-            <p>
+            <p class="text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -110,7 +119,7 @@
               height="260"
             />
             <h3 class="title">Игорь Демьяненко</h3>
-            <p lang="en">Product Designer</p>
+            <p class="subtext" lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -120,7 +129,7 @@
               height="260"
             />
             <h3 class="title">Ольга Репина</h3>
-            <p lang="en">Frontend Developer</p>
+            <p class="subtext" lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -130,7 +139,7 @@
               height="260"
             />
             <h3 class="title">Николай Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <p class="subtext" lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -140,7 +149,7 @@
               height="260"
             />
             <h3 class="title">Михаил Ермаков</h3>
-            <p lang="en">UI Designer</p>
+            <p class="subtext" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
