--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
@@ -30,7 +36,7 @@
     </header>
     <main>
       <section class="portfolio">
-        <h1>Портфолио</h1>
+        <h1 class="visually-hidden">Портфолио</h1>
         <ul class="list">
           <li><button type="button" class="button">Все</button></li>
           <li><button type="button" class="button">Веб-сайты</button></li>
@@ -38,7 +44,7 @@
           <li><button type="button" class="button">Дизайн</button></li>
           <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-        <ul class="list">
+        <ul class="portfolio-list list">
           <li>
             <a href="" class="link">
               <img
